--- a/template/login.hbs
+++ b/template/login.hbs
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="/login.css">
 </head>
 <body>
-
-    <h1>Login Form</h1>
+    <h1>Login Forms</h1>
     <form id="loginform">
         <input placeholder="Email" name="email" type="text" id="email" required>
         <br>
