--- a/template/login.hbs
+++ b/template/login.hbs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MYFIN.TRACK</title>
+    <title>Money Mind</title>
     <link rel="stylesheet" href="../login.css">
 </head>
 <body>
-    <h1>MYFIN TRACK</h1>
+    <h1>Money Mind</h1>
     <h3>Track your expenses</h3>
     <form id="loginform">
         <input placeholder="Email" name="email" type="text" id="email" required>
