--- a/template/register.hbs
+++ b/template/register.hbs
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Money Mind</title>
   <link rel="stylesheet" href="../register.css">
 </head>
 <body>
-  <h1>MYFIN TRACK</h1>
+  <h1>Money Mind</h1>
   <h3>Track your expenses</h3>
   <form id="registerForm">
     <input placeholder="Email" name="email" type="text" id="email" required>
