--- a/template/signin.hbs
+++ b/template/signin.hbs
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Money Mind</title>
-    <link rel="stylesheet" href="../login.css">
+    <link rel="stylesheet" href="../signin.css">
 </head>
 <body>
     <h1>Money Mind</h1>
     <h3>Track your expenses</h3>
-    <form id="loginform">
+    <form id="signinform">
         <input placeholder="Email" name="email" type="text" id="email" required>
         <br>
         <input placeholder="Password" name="password" type="password" id="password" required>
@@ -18,18 +18,18 @@
         <input class="sub" type="submit" value="Signin">
         <p id="message"></p>
         <h3>don't have an account?</h3>
-        <button class="sub" onclick="window.location.href='/register'">Signup</button>
+        <button class="sub" onclick="window.location.href='/signup'">Signup</button>
     </form>
 
     <script>
-        async function loginUser(event) {
+        async function signinUser(event) {
             event.preventDefault(); // Prevent form submission
             console.log("enterd");
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
             try {
-                const response = await fetch('/login', {
+                const response = await fetch('/signin', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -49,16 +49,16 @@
                     window.location.href = '/home'; // Example redirect
                 } else {
                     document.getElementById('message').innerHTML=data.message;
-                    console.log('Login failed:', data.message);
+                    console.log('signin failed:', data.message);
                     // Show error message to the user
                 }
             } catch (error) {
-                console.error('Error during login:', error);
+                console.error('Error during signin:', error);
                 // Handle fetch error
             }
         }
 
-        document.getElementById('loginform').addEventListener('submit', loginUser);
+        document.getElementById('signinform').addEventListener('submit', signinUser);
     </script>
 
 </body>
