last commit changed in html,,now changed in hbs oopss

--- a/template/signin.hbs
+++ b/template/signin.hbs
@@ -167,7 +167,12 @@
         display: flex;
         transform: translateX(0); /* Slide-in effect */
     }
-
+     .logo img{
+        width:300px;
+    }
+    .hero-section h2{
+       font-size: 35px;
+    }
     
 }
 
