--- a/template/landing.hbs
+++ b/template/landing.hbs
@@ -166,6 +166,12 @@
         display: flex;
         transform: translateX(0); /* Slide-in effect */
     }
+     .logo img{
+        width:300px;
+    }
+    .hero-section h2{
+       font-size: 35px;
+    }
 
     
 }
