Update landing.hbs 250px

--- a/template/landing.hbs
+++ b/template/landing.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+oo<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -167,7 +167,7 @@
         transform: translateX(0); /* Slide-in effect */
     }
      .logo img{
-        width:200px;
+        width:250px;
     }
     .hero-section h2{
        font-size: 35px;
