--- a/template/landing.hbs
+++ b/template/landing.hbs
@@ -1,4 +1,4 @@
-oo<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -167,7 +167,7 @@ oo<!DOCTYPE html>
         transform: translateX(0); /* Slide-in effect */
     }
      .logo img{
-        width:250px;
+        width:260px;
     }
     .hero-section h2{
        font-size: 35px;
