--- a/template/signup.hbs
+++ b/template/signup.hbs
@@ -4,25 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Money Mind</title>
-  <link rel="stylesheet" href="../signup.css">
+  <link rel="stylesheet" href="signin.css">
+  <link rel="stylesheet" href="landing.css">
 </head>
 <body>
-  <h1>Money Mind</h1>
-  <h3>Track your expenses</h3>
+  {{>header
+    homeLink='/'
+  }}
+
+  <div class="container">
   <form id="signupForm">
+    <h3>Signup to MoneyMind</h3>
     <input placeholder="Email" name="email" type="text" id="email" required>
     <br>
     <input placeholder="Password" name="password" type="password" id="password" required>
     <br>
     <input class="sub" type="submit" value="Signup">
-    <h3>Already have an account?</h3>
-    <button class="sub" onclick="window.location.href='/signin'">Signin</button>
+    <p id="message"></p>
+    <h3 style="display: inline;">Already have an account?</h3>
+    <a href="/signin">Signin</a>
   </form>
   
+  </div>
+  
   <!-- Placeholder for error/success messages -->
-  <div id="message" style="color: red;"></div>
+  
+
+
+  {{>features}}
+  {{>footer}}
 
   <script>
+
+     document.querySelector('.menu-toggle').addEventListener('click', function() {
+    document.querySelector('.navbar').classList.toggle('active');
+});
+
    async function signupUser(event) {
   event.preventDefault(); // Prevent form submission
 
