"changes in css of landing page"

--- a/public/landing.css
+++ b/public/landing.css
@@ -5,58 +5,40 @@ padding: 0;
 }
 
 header {
-height: 110px; /* Adjusted to fit content */
-background-color: white;
+height: 110px; 
+background-color: rgb(255, 255, 255);
 position: fixed;
-margin-top: 0;
-width: 100%; /* Ensure it spans full width */
-z-index: 1000; /* To ensure it stays on top */
+display:flex;
+width: 100%;
 box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
 }
-.header{
-          margin-top: 0;
-          background-color: white;
-          display:flex;
-          height:60px;
-          justify-content: space-between;
-      align-items: center;
-      
-      
-         
-   }
-   .navbar {
+.logobar{
+  flex: 1;
 
-display: flex;
-align-items: center;
-text-decoration: none;
+}
+ .navbar {
+    flex: 1;
+  
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
-.navbar ul{
-list-style: none;
-display: flex;
-text-decoration: none;
-
+.navbar ul {
+  display: flex;
+  list-style: none;
 }
 
 .navbar ul li a{
-margin: 0 20px;
-color:black;
-
-text-decoration: none;
+  font-size: 20px;
+  margin-right: 20px; /* Space between each item */
+  text-decoration: none;
+  color: black;
 }
 .navbar ul li a:hover {
-  text-shadow: #000000;
   text-decoration: underline;
 }
-.menu-toggle {
-display: none;
-background-color: #000000;
-border: none;
-color: white;
-padding: 10px;
-font-size: 16px;
 
-}
 
 .hero-section {
  
@@ -137,38 +119,36 @@ font-size: 16px;
 
 /* Media Queries for responsiveness */
 @media (max-width: 768px) {
-.menu-toggle {
-display: block; /* Show menu button on mobile */
-}
-.navbar ul {
-display: none; /* Initially hidden */
-flex-direction: column;
-position: fixed;
-top: 0;
-right: 0; /* Align to the right */
-height: 80px; /* Full height */
-width: 150px; /* Adjust width as needed */
-/* Offset for header */
-transition: transform 0.3s ease-in-out;
-transform: translateX(100%); /* Hidden off-screen to the right */
-}
-.navbar li{
-margin-top: 5px;
-text-shadow: 0px 0px 20px #000000;
+  img{
+    width:200px;
+  }
 
-}
+  header {
+    flex-direction: column;
+    height: 120px;
+    }
+    .logobar{
+      flex: 1;
+      display: flex;
+      justify-content: center;
+    }
+     .navbar {
+        height:30px;
+        flex: 1;
+        display: flex;
+        justify-content: center;
+    }
+    
 
-.navbar.active ul {
-margin-top: 70px;
-display: flex;
-transform: translateX(0); /* Slide-in effect */
+    
+    .navbar ul li a{
+      font-size: 15px;
+    
+    }
+ 
+/* Hero section heading */
+.hero-section h2 {
+  font-size: 35px;
 }
-.logo img{
-width:250px;
-}
-.hero-section h2{
-font-size: 35px;
-}
-
 
 }
