--- a/template/landing.hbs
+++ b/template/landing.hbs
@@ -35,6 +35,7 @@
     
 <script>
     document.querySelector('.menu-toggle').addEventListener('click', function() {
+        console.log("toggle selected");
     document.querySelector('.navbar').classList.toggle('active');
 });
 </script>
