--- a/template/partials/header.hbs
+++ b/template/partials/header.hbs
@@ -1,17 +1,16 @@
 <header>
-  <div class="header">
-    <div class="logo" style="margin-top: 50px;">
+  
+    <div class="logobar">
       <img src="html/moneymind2.png" alt="Money Mind Logo" width="250px">
     </div>
     <div class="navbar">
-      <button class="menu-toggle">Menu</button>
-      <ul class="menu">
+      <ul>
         <li><a href="{{homeLink}}">Home</a></li>
         <li><a href="#privacy-policy">Privacy Policy</a></li>
         <li><a href="#about-us">About Us</a></li>
         <li><a href="#contact-us">Contact Us</a></li>
       </ul>
     </div>
-  </div>
+  
   <hr>
 </header>
