"added console.log for every file for better understanding,and removed bugs(eventListener for void element)"

--- a/template/signin.hbs
+++ b/template/signin.hbs
@@ -42,10 +42,9 @@
     {{> features}}
     {{> footer}}
 <script>
-    document.querySelector('.menu-toggle').addEventListener('click', function() {
-    document.querySelector('.navbar').classList.toggle('active');
-});
+
 async function signinUser(event) {
+    console.log("entered into login");
             event.preventDefault(); // Prevent form submission
             console.log("enterd");
             const email = document.getElementById('email').value;
