--- a/template/partials/header.hbs
+++ b/template/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
   
     <div class="logobar">
-      <img src="html/moneymind2.png" alt="Money Mind Logo" width="250px">
+      <img src="images/moneymind2.png" alt="Money Mind Logo" width="250px">
     </div>
     <div class="navbar">
       <ul>
