--- a/template/partials/header.hbs
+++ b/template/partials/header.hbs
@@ -1,7 +1,9 @@
 <header>
   
     <div class="logobar">
+      <a href="{{homeLink}}">
       <img src="images/moneymind2.png" alt="Money Mind Logo" width="250px">
+      </a>
     </div>
     <div class="navbar">
       <ul>
